# automative_adaptive_inspection

./: CMakeLists.txt  Documentation.html  README.md
Documentation/html/: _comparison_8h_source.html  _depthcam_8h_source.html  _dimension_8hpp_source.html  _file_i_o_8h_source.html  _menu_8h_source.html  _registration_8h_source.html  _turntable_8h_source.html  _visual_8h_source.html  annotated.html  class_comparison-members.html  class_comparison.html  class_depthcam-members.html  class_depthcam.html  class_file_i_o-members.html  class_file_i_o.html  class_menu-members.html  class_menu.html  class_registration-members.html  class_registration.html  class_turntable-members.html  class_turntable.html  class_visual-members.html  class_visual.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  struct_c_a_d_feature-members.html  struct_c_a_d_feature.html  struct_dimension-members.html  struct_dimension.html
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+16 more)
Documentation/latex/: annotated.tex  class_comparison.tex  class_depthcam.tex  class_file_i_o.tex  class_menu.tex  class_registration.tex  class_turntable.tex  class_visual.tex  index.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  struct_c_a_d_feature.tex  struct_dimension.tex
Results/: lego_block.jt  lego_block.par  testobjekt-fixed.jt  testobjekt-fixed.par
Results/7.3.1 Free of defects Lego block/Operating Distance 10-13/: HausdorffCloud.pcd  MeasuredCloud.pcd  MeasuredCloudAfterHausdorff.pcd  MeasuredCloudAfterRegistration.pcd  MeasuredReferences.pcd  Results.txt
Results/7.3.1 Free of defects Lego block/Operating Distance 13-17/: HausdorffCloud.pcd  MeasuredCloud.pcd  MeasuredCloudAfterHausdorff.pcd  MeasuredCloudAfterRegistration.pcd  MeasuredReferences.pcd  References.pcd  Results.txt
Results/7.3.2 Defective Lego block type 1/: HausdorffCloud.pcd  MeasuredCloud.pcd  MeasuredCloudAfterHausdorff.pcd  MeasuredCloudAfterRegistration.pcd  MeasuredReferences.pcd  Results.txt
Results/7.3.3 Defective Lego block type 2/: HausdorffCloud.pcd  MeasuredCloud.pcd  MeasuredCloudAfterHausdorff.pcd  MeasuredCloudAfterRegistration.pcd  MeasuredReferences.pcd  Results.txt
Results/7.3.4 Free of Defects camera adapter/: MeasuredReferences.pcd  Results.txt
Results/7.3.5  Defective camera adapter/: MeasuredReferences.pcd  References.pcd  Results.txt
Results/7.4 Comparison to other methods/: lego_defectfree_HausdorffCloud.pcd  lego_defectfree_afterRegistration.pcd  lego_defectfree_withoutBackground.pcd
include/: Comparison.h  Depthcam.h  Dimension.hpp  FileIO.h  Menu.h  Registration.h  Visual.h
src/: Comparison.cpp  Depthcam.cpp  FileIO.cpp  Menu.cpp  Registration.cpp  Visual.cpp  main.cpp
